optimize getting entities at pos