@@ -1,5 +1,12 @@
 package pl.lonski.dzibdzikon;
 
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 import pl.lonski.dzibdzikon.effect.tile.TileEffect;
 import pl.lonski.dzibdzikon.entity.Entity;
 import pl.lonski.dzibdzikon.entity.FeatureType;
@@ -7,18 +14,10 @@ import pl.lonski.dzibdzikon.entity.features.Openable;
 import pl.lonski.dzibdzikon.entity.features.Position;
 import pl.lonski.dzibdzikon.map.TileGrid;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 public class Level {
 
     private final TileGrid map;
+    private final HashSet[][] entityMap;
     private final List<Entity> entities = new ArrayList<>();
     private final Set<Point> visited = new HashSet<>();
     private final Set<Point> visible = new HashSet<>();
@@ -26,10 +25,51 @@ public class Level {
 
     public Level(TileGrid map) {
         this.map = map;
+        this.entityMap = new HashSet[map.getWidth()][map.getHeight()];
+    }
+
+    public void updateEntityPos(Entity entity, Point prevPos, Point newPos) {
+        if (entity == null) {
+            throw new IllegalArgumentException("entity is null");
+        }
+
+        if (prevPos.equals(newPos)) {
+            return;
+        }
+
+        if (!map.inBounds(prevPos) || !map.inBounds(newPos)) {
+            throw new IllegalArgumentException("Position out of bounds");
+        }
+
+        // remove entity from previous position
+        var prevEntities = entityMap[prevPos.x()][prevPos.y()];
+        if (prevEntities != null) {
+            prevEntities.remove(entity);
+        }
+
+        // add entity to new position
+        var newEntities = entityMap[newPos.x()][newPos.y()];
+        if (newEntities == null) {
+            newEntities = new HashSet<>();
+            entityMap[newPos.x()][newPos.y()] = newEntities;
+        }
+        newEntities.add(entity);
     }
 
     public void addEntity(Entity entity) {
-        this.entities.add(entity);
+        var pos = entity.<Position>getFeature(FeatureType.POSITION);
+        if (pos == null) {
+            throw new IllegalStateException("entity has no pos");
+        }
+
+        var coords = pos.getCoords();
+        var posEntities = entityMap[coords.x()][coords.y()];
+        if (posEntities == null) {
+            posEntities = new HashSet<>();
+            entityMap[coords.x()][coords.y()] = posEntities;
+        }
+        posEntities.add(entity);
+        entities.add(entity);
     }
 
     public List<Entity> getEntities() {
@@ -74,14 +114,14 @@ public class Level {
             return true;
         }
 
-        if (includeMonsters && getEntityAt(pos, FeatureType.ATTACKABLE).isPresent()) {
+        if (includeMonsters && getEntityAt(pos, FeatureType.ATTACKABLE) != null) {
             return true;
         }
 
         // openables
-        if (getEntityAt(pos, FeatureType.OPENABLE)
-                .map(o -> o.<Openable>getFeature(FeatureType.OPENABLE).obstacle())
-                .orElse(false)) {
+        var entityAtPos = getEntityAt(pos, FeatureType.OPENABLE);
+        if (entityAtPos != null
+                && entityAtPos.<Openable>getFeature(FeatureType.OPENABLE).obstacle()) {
             return true;
         }
 
@@ -94,69 +134,57 @@ public class Level {
         }
 
         // openables
-        if (getEntityAt(pos, FeatureType.OPENABLE)
-                .map(o -> o.<Openable>getFeature(FeatureType.OPENABLE).opaque())
-                .orElse(false)) {
+        var entityAtPos = getEntityAt(pos, FeatureType.OPENABLE);
+        if (entityAtPos != null
+                && entityAtPos.<Openable>getFeature(FeatureType.OPENABLE).opaque()) {
             return true;
         }
 
         return map.getTile(pos).isWall();
     }
 
-    public Point getRandomFreePosition() {
-        while (true) {
-            Point pos = new Point(DzibdziRandom.nextInt(map.getWidth()), DzibdziRandom.nextInt(map.getHeight()));
-            if (map.getTile(pos).isFloor()
-                    && getEntitiesAt(pos, FeatureType.POSITION).isEmpty()) {
-                return pos;
-            }
+    public HashSet<Entity> getEntitiesAt(Point targetPos) {
+        var entitiesAt = entityMap[targetPos.x()][targetPos.y()];
+        if (entitiesAt == null) {
+            return new HashSet<>();
         }
+        return entitiesAt;
     }
 
-    public Optional<Entity> getEntityAt(Point pos, FeatureType featureType) {
-        return getEntitiesAt(pos, featureType).stream().findFirst();
+    public Entity getEntityAt(Point pos, FeatureType featureType) {
+        return getEntitiesAt(pos).stream()
+                .filter(e -> featureType == null || e.getFeature(featureType) != null)
+                .findFirst()
+                .orElse(null);
     }
 
     public List<Entity> getEntitiesAt(Point targetPos, FeatureType featureType) {
-        return getEntities().stream()
-                .filter(e -> {
-                    var pos = e.<Position>getFeature(FeatureType.POSITION);
-                    return pos != null && pos.getCoords().equals(targetPos);
-                })
+        return getEntitiesAt(targetPos).stream()
                 .filter(e -> featureType == null || e.getFeature(featureType) != null)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Entity> getEntitiesAtCircle(Point center, int radius, FeatureType featureType) {
         var points = new HashSet<Point>();
         PositionUtils.inFilledCircleOf(radius, cp -> points.add(cp.add(center)));
 
-        return getEntities().stream()
-                .filter(e -> {
-                    var pos = e.<Position>getFeature(FeatureType.POSITION);
-                    return pos != null && points.contains(pos.getCoords());
-                })
+        return points.stream()
+                .filter(map::inBounds)
+                .flatMap(p -> getEntitiesAt(p).stream())
                 .filter(e -> featureType == null || e.getFeature(featureType) != null)
                 .collect(Collectors.toList());
     }
 
     public List<Entity> getEntitiesAt(Set<Point> points, FeatureType featureType) {
-        return getEntities().stream()
-                .filter(e -> {
-                    var pos = e.<Position>getFeature(FeatureType.POSITION);
-                    return pos != null && points.contains(pos.getCoords());
-                })
+        return points.stream()
+                .flatMap(p -> getEntitiesAt(p).stream())
                 .filter(e -> featureType == null || e.getFeature(featureType) != null)
                 .collect(Collectors.toList());
     }
 
-    public Optional<Entity> getFirstEntity(FeatureType featureType) {
-        return getEntities().stream()
-                .filter(e -> e.getFeature(featureType) != null)
-                .findFirst();
-    }
-
     public void removeEntity(Entity entity) {
+        var pos = entity.<Position>getFeature(FeatureType.POSITION);
+        getEntitiesAt(pos.getCoords()).remove(entity);
         entities.remove(entity);
     }
 }
